--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ html {
 
 .wrapper {
     max-width: 768px;
-    background-color: green;
     position: relative;
     background-image: url(./images/banner_mobile.png);
 }
@@ -147,7 +146,7 @@ li {
 }
 
 .program-line {
-    width: 7rem;
+    width: 6rem;
     height: 0.2rem;
     background-color: rgb(239, 81, 60);
     margin-top: 1.5rem;
@@ -172,3 +171,57 @@ li {
     color: #fff;
     font-size: 1.2rem;
 }
+
+.speakers-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 2rem;
+}
+
+.speaker-heading {
+    font-size: 3rem;
+    color: #272a32;
+}
+
+.footer {
+    background-color: #2e2e2e;
+}
+
+.footer-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 3rem;
+}
+
+.footer-partner {
+    font-size: 3rem;
+}
+
+.sponsor-logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    padding: 1.5rem;
+}
+
+.sponsor-logo img  {
+    height: 6rem;
+    width: 8rem;
+}
+
+/* @media (min-width: 768px){
+    .wrapper {
+        min-width: 768px;
+    }
+
+    html {
+        font-size: 100%;
+        scroll-behavior: smooth;
+        font-family: 'poppins', sans-serif;
+    }
+} */
