--- a/style.css
+++ b/style.css
@@ -214,6 +214,27 @@ li {
     width: 8rem;
 }
 
+.break {
+    display: none;
+}
+
+.banner-area-about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.greeting_title_banner-about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title-banner-text-about {
+    background-color: #ec5242;
+}
+
 /* @media (min-width: 768px){
     .wrapper {
         min-width: 768px;
