--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ html {
 }
 
 .wrapper {
-    max-width: 768px;
     position: relative;
     background-image: url(./images/banner_mobile.png);
 }
@@ -55,8 +54,9 @@ li {
     display: flex;
     flex-direction: column;
     background-color: rgb(39, 42, 50);
-    position: absolute;
+    position: fixed;
     width: 100%;
+    height: 100vh;
     color: #fff;
     top: 0;
     left: -100%;
@@ -74,7 +74,6 @@ li {
 }
 
 .header_items_mobile li a{
-   
     font-size: 2rem;
     color: #fff;
 }
@@ -93,7 +92,7 @@ li {
 }
 
 .title-banner-text {
-    font-size: 5rem;
+    font-size: 3rem;
     font-weight: 900;
     font-family: 'Gotham', sans-serif;
     background: url(./images/text-image.jpg) 50% 50%;
@@ -223,10 +222,6 @@ li {
     width: 8rem;
 }
 
-.break {
-    display: none;
-}
-
 .banner-area-about {
     display: flex;
     flex-direction: column;
@@ -242,7 +237,7 @@ li {
 
 .title-banner-text-about {
     color: rgb(240, 81, 61);
-    font-size: 5rem;
+    font-size: 3rem;
     font-weight: 900;
     font-family: 'Gotham', sans-serif;
 }
@@ -308,14 +303,89 @@ li {
     font-size: 2.5rem;
 }
 
-/* @media (min-width: 768px){
+@media (min-width: 768px){
     .wrapper {
         min-width: 768px;
     }
 
     html {
-        font-size: 100%;
+        font-size: 88%;
         scroll-behavior: smooth;
         font-family: 'poppins', sans-serif;
     }
-} */
+
+    .header {
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
+        flex-direction: row;
+        position: fixed;
+        width: 100%;
+        background-color: #fff;
+        z-index: 1;
+    }
+
+    .header_items_desktop {
+        display: flex;
+    }
+
+    .header_items_desktop li a {
+        padding: 1rem;
+        margin-right: 0.2rem;
+        font-size: 1.2rem;
+        color: #888;
+    }
+
+    .compain-link {
+        background-color: #ef513c;
+        transition: all 0.5s;
+        color: #fff !important;
+    }
+
+    .compain-link:hover {
+        border: 1px solid #ef513c;
+        color: #888 !important;
+        background-color: transparent;
+    }
+
+    .slide-bar_mobile {
+        display: none;
+    }
+
+    .fa-bars {
+        display: none;
+    }
+
+    .greeting_title_banner {
+        padding-top: 20rem;
+    }
+
+    .title-banner-text {
+        font-size: 5rem;
+    }
+
+    .title-banner-text-about {
+        font-size: 5rem;
+    }
+
+    .main-program-card-container {
+        display: flex;
+    }
+
+    .program-card {
+        flex-direction: column;
+    }
+
+    .events-section img {
+        height: 35rem;
+        width: 60%;
+    }
+
+    .future-events-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 2rem;
+        padding: 2rem 2rem;
+    }
+
+
+}
