--- a/style.css
+++ b/style.css
@@ -1,395 +1,396 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.25%;
-    scroll-behavior: smooth;
-    font-family: 'poppins', sans-serif;
+  font-size: 62.25%;
+  scroll-behavior: smooth;
+  font-family: 'poppins', sans-serif;
 }
 
 .wrapper {
-    position: relative;
-    background-image: url(./images/banner_mobile.png);
+  position: relative;
+  background-image: url(./images/banner_mobile.png);
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem 2rem;
-    align-items: center;
-    flex-direction: row-reverse;
-    /* box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4); */
-    position: relative;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+  align-items: center;
+  flex-direction: row-reverse;
+
+  /* box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4); */
+  position: relative;
 }
 
 .fa-bars {
-    font-size: 2rem;
-    cursor: pointer;
+  font-size: 2rem;
+  cursor: pointer;
 }
 
 .fa-times {
-    font-size: 3rem;
-    padding: 2rem;
-    position: absolute;
-    right: 5%;
-    cursor: pointer;
+  font-size: 3rem;
+  padding: 2rem;
+  position: absolute;
+  right: 5%;
+  cursor: pointer;
 }
 
 .header_items_desktop {
-    display: none;
+  display: none;
 }
 
 .slide-bar_mobile {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(39, 42, 50);
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    color: #fff;
-    top: 0;
-    left: -100%;
-    transition: all 0.5s;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(39, 42, 50);
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  color: #fff;
+  top: 0;
+  left: -100%;
+  transition: all 0.5s;
 }
 
 .header_items_mobile {
-    padding-top: 4rem ;
+  padding-top: 4rem;
 }
 
 .header_items_mobile li {
-    margin-top: 0.4rem;
-    border-bottom: 2px solid rgb(60, 63, 70);
-    padding: 1.4rem;
+  margin-top: 0.4rem;
+  border-bottom: 2px solid rgb(60, 63, 70);
+  padding: 1.4rem;
 }
 
-.header_items_mobile li a{
-    font-size: 2rem;
-    color: #fff;
+.header_items_mobile li a {
+  font-size: 2rem;
+  color: #fff;
 }
 
 .banner-area {
-    max-width: 95%;
+  max-width: 95%;
 }
 
 .greeting_title_banner {
-    padding: 2rem;
+  padding: 2rem;
 }
 
 .greeting-banner-text {
-    color: rgb(211, 59, 4);
-    font-size: 2rem;
+  color: rgb(211, 59, 4);
+  font-size: 2rem;
 }
 
 .title-banner-text {
-    font-size: 3rem;
-    font-weight: 900;
-    font-family: 'Gotham', sans-serif;
-    background: url(./images/text-image.jpg) 50% 50%;
-    background-size: cover;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
+  font-size: 3rem;
+  font-weight: 900;
+  font-family: 'Gotham', sans-serif;
+  background: url(./images/text-image.jpg) 50% 50%;
+  background-size: cover;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
 .description-banner-text {
-    font-size: 1.3rem;
-    color: #333333;
-    border: 5px solid #fff;
-    margin-left: 2rem;
-    padding: 1rem;
+  font-size: 1.3rem;
+  color: #333;
+  border: 5px solid #fff;
+  margin-left: 2rem;
+  padding: 1rem;
 }
 
 .description-banner-text-about {
-    background-color: #fff;
-    border: 1px solid #272a32;
+  background-color: #fff;
+  border: 1px solid #272a32;
 }
 
 .date_banner_text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 13rem;
-    font-size: 1.4rem;
-    padding: 0 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 13rem;
+  font-size: 1.4rem;
+  padding: 0 2rem;
 }
 
-.date-text{
-    font-weight: bold;
+.date-text {
+  font-weight: bold;
 }
 
 .date_conversion_banner {
-    color: #333333;
+  color: #333;
 }
 
 .program-title-area {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 5rem;
-    font-size: 1.6rem;
-    color: #fff;
-    padding-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5rem;
+  font-size: 1.6rem;
+  color: #fff;
+  padding-top: 3rem;
 }
 
 .program_area {
-    background-image: url(./images/program_ground.jpg);
-    background-repeat: repeat;
-    padding-bottom: 5rem;
+  background-image: url(./images/program_ground.jpg);
+  background-repeat: repeat;
+  padding-bottom: 5rem;
 }
 
 .program-line {
-    width: 6rem;
-    height: 0.2rem;
-    background-color: rgb(239, 81, 60);
-    margin-top: 1.5rem;
+  width: 6rem;
+  height: 0.2rem;
+  background-color: rgb(239, 81, 60);
+  margin-top: 1.5rem;
 }
 
 .program-card {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 2rem 0.9rem 2rem;
-    background-color: rgba(255, 255, 255, 0.1);
-    padding: 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 2rem 0.9rem 2rem;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 3rem;
 }
 
 .program-title {
-    color: #ef513c;
-    font-size: 1.4rem;
-    margin-right: 1rem;
+  color: #ef513c;
+  font-size: 1.4rem;
+  margin-right: 1rem;
 }
 
 .program-description {
-    color: #fff;
-    font-size: 1.2rem;
+  color: #fff;
+  font-size: 1.2rem;
 }
 
 .speakers-area {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .speakers-title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 2rem;
 }
 
 .speaker-heading {
-    font-size: 3rem;
-    color: #272a32;
+  font-size: 3rem;
+  color: #272a32;
 }
 
 .footer {
-    background-color: #2e2e2e;
+  background-color: #2e2e2e;
 }
 
 .footer-title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding-top: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 3rem;
 }
 
 .footer-partner {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 .sponsor-logo {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-    padding: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  padding: 1.5rem;
 }
 
-.sponsor-logo img  {
-    height: 6rem;
-    width: 8rem;
+.sponsor-logo img {
+  height: 6rem;
+  width: 8rem;
 }
 
 .banner-area-about {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .greeting_title_banner-about {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .title-banner-text-about {
-    color: rgb(240, 81, 61);
-    font-size: 3rem;
-    font-weight: 900;
-    font-family: 'Gotham', sans-serif;
+  color: rgb(240, 81, 61);
+  font-size: 3rem;
+  font-weight: 900;
+  font-family: 'Gotham', sans-serif;
 }
 
 .conferences-events {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .events-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .event-description {
-    padding: 2rem;
-    font-size: 1.5rem;
+  padding: 2rem;
+  font-size: 1.5rem;
 }
 
 .events-section img {
-    height: 27rem;
-    width: 85%;
+  height: 27rem;
+  width: 85%;
 }
 
 .event-card-container {
-    height: 27rem;
-    width: 70%;
-    position: relative;
-    background-color: green;
+  height: 27rem;
+  width: 70%;
+  position: relative;
+  background-color: green;
 }
 
 .future-events-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-    padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  padding: 2rem 0;
 }
 
 .event-card-container img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .event-card-description {
-    font-size: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    position: absolute;
-    background-color: rgba(150, 8, 8, 0.7);
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  background-color: rgba(150, 8, 8, 0.7);
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 
 .event-year {
-    font-weight: bold;
-    font-size: 2.5rem;
+  font-weight: bold;
+  font-size: 2.5rem;
 }
 
-@media (min-width: 768px){
-    .wrapper {
-        min-width: 768px;
-    }
+@media (min-width: 768px) {
+  .wrapper {
+    min-width: 768px;
+  }
 
-    html {
-        font-size: 88%;
-        scroll-behavior: smooth;
-        font-family: 'poppins', sans-serif;
-    }
+  html {
+    font-size: 88%;
+    scroll-behavior: smooth;
+    font-family: 'poppins', sans-serif;
+  }
 
-    .header {
-        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
-        flex-direction: row;
-        position: fixed;
-        width: 100%;
-        background-color: #fff;
-        z-index: 1;
-    }
+  .header {
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
+    flex-direction: row;
+    position: fixed;
+    width: 100%;
+    background-color: #fff;
+    z-index: 1;
+  }
 
-    .header_items_desktop {
-        display: flex;
-    }
+  .header_items_desktop {
+    display: flex;
+  }
 
-    .header_items_desktop li a {
-        padding: 1rem;
-        margin-right: 0.2rem;
-        font-size: 1.2rem;
-        color: #888;
-    }
+  .header_items_desktop li a {
+    padding: 1rem;
+    margin-right: 0.2rem;
+    font-size: 1.2rem;
+    color: #888;
+  }
 
-    .compain-link {
-        background-color: #ef513c;
-        transition: all 0.5s;
-        color: #fff !important;
-    }
+  .compain-link {
+    background-color: #ef513c;
+    transition: all 0.5s;
+    color: #fff !important;
+  }
 
-    .compain-link:hover {
-        border: 1px solid #ef513c;
-        color: #888 !important;
-        background-color: transparent;
-    }
+  .compain-link:hover {
+    border: 1px solid #ef513c;
+    color: #888 !important;
+    background-color: transparent;
+  }
 
-    .slide-bar_mobile {
-        display: none;
-    }
+  .slide-bar_mobile {
+    display: none;
+  }
 
-    .fa-bars {
-        display: none;
-    }
+  .fa-bars {
+    display: none;
+  }
 
-    .greeting_title_banner {
-        padding-top: 20rem;
-    }
+  .greeting_title_banner {
+    padding-top: 20rem;
+  }
 
-    .title-banner-text {
-        font-size: 5rem;
-    }
+  .title-banner-text {
+    font-size: 5rem;
+  }
 
-    .title-banner-text-about {
-        font-size: 5rem;
-    }
+  .title-banner-text-about {
+    font-size: 5rem;
+  }
 
-    .main-program-card-container {
-        display: flex;
-    }
+  .main-program-card-container {
+    display: flex;
+  }
 
-    .program-card {
-        flex-direction: column;
-    }
+  .program-card {
+    flex-direction: column;
+    padding: 2rem;
+    margin: 0.5rem 0.5rem;
+  }
 
-    .events-section img {
-        height: 35rem;
-        width: 60%;
-    }
+  .events-section img {
+    height: 35rem;
+    width: 60%;
+  }
 
-    .future-events-container {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 2rem;
-        padding: 2rem 2rem;
-    }
+  .future-events-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2rem;
+    padding: 2rem 2rem;
+  }
 
-    .footer {
-        padding: 0 3rem;
-    }
-
-
+  .footer {
+    padding: 0 3rem;
+  }
 }
