--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ li {
 
 .speakers-area {
   background-color: #fff;
+  padding-bottom: 5rem;
 }
 
 .speakers-title {
@@ -376,6 +377,33 @@ li {
   color: #ef513c;
 }
 
+.footer-wrapper {
+  display: flex;
+  justify-content: center;
+  height: 12rem;
+  align-items: center;
+  background-color: #f2f2f2;
+  padding: 2rem 1rem;
+}
+
+.left-footer-img-container .footer-logo {
+  max-width: 15rem;
+}
+
+.right-footer-holder {
+  font-size: 1.8rem;
+  color: #8c8c8c;
+  padding-left: 1.5rem;
+}
+
+.disclaimer {
+  display: none;
+}
+
+.footer-wrapper-about {
+  background-color: #fff;
+}
+
 @media (min-width: 768px) {
   .wrapper {
     min-width: 768px;
@@ -514,5 +542,36 @@ li {
   .speaker-title {
     font-size: 1.1rem;
     padding: 0.5rem 0;
+  }
+
+  .footer-break {
+    display: none;
+  }
+
+  .footer-wrapper {
+    display: flex;
+    justify-content: center;
+    height: 12rem;
+    align-items: center;
+    background-color: #f2f2f2;
+    padding: 2rem 4rem;
+  }
+
+  .right-footer-holder {
+    font-size: 1.3rem;
+    color: #8c8c8c;
+    padding-left: 3rem;
+  }
+
+  .rights {
+    padding-bottom: 1rem;
+  }
+
+  .disclaimer {
+    display: block;
+  }
+
+  .footer-wrapper-about {
+    background-color: #2e2e2e;
   }
 }
